[tool.poetry]
name = "aula12-bootcamp"
version = "0.1.0"
description = ""
authors = ["Gustavo Lourenco da Silva <gustavolsilva@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
